<resources>
    <string name="app_name">Stonks</string>
    <string name="convert_button">Choose</string>
    <string name="euro_symbol">€</string>
    <string name="dollar_symbol">$</string>
    <string name="pound_symbol">£</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="enter_amount">Enter amount...</string>
    <string name="amount">0</string>
    <string name="choose_rate">Choose Rate</string>
    <string name="invert">Invert</string>
    <string name="_0">0</string>
</resources>