<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <RadioGroup
                android:id="@+id/radio_group_from"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/from" />

                <RadioButton
                    android:id="@+id/fromEuro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euro_symbol"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/fromPound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pound_symbol"
                    android:checked="false"/>

                <RadioButton
                    android:id="@+id/fromDollar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dollar_symbol"
                    android:checked="false"/>
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radio_group_to"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/to" />

                <RadioButton
                    android:id="@+id/toEuro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euro_symbol"
                    android:checked="false"/>

                <RadioButton
                    android:id="@+id/toPound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pound_symbol"
                    android:checked="false"/>

                <RadioButton
                    android:id="@+id/toDollar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/dollar_symbol" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/convert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:onClick="sendBackData"
            android:text="@string/convert_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>